CI: Auto build at 18:00 every day
Signed-off-by: xiaoleGun <1592501605@qq.com>

--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -3,6 +3,9 @@ on:
   watch:
     types: [started]
 
+  schedule:
+    - cron: '0 18 * * *'
+
   workflow_dispatch:
     inputs:
        KERNEL_DEFCONFIG:
