CI: Default build boot image
Signed-off-by: xiaoleGun <1592501605@qq.com>

--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -34,7 +34,7 @@ on:
        MAKE_BOOT_IMAGE:
          description: 'Make boot image'
          required: false
-         default: 'false'
+         default: 'true'
          type: boolean
        SOURCE_BOOT_IMAGE:
          description: 'Your original boot image url'
