--- a/fs/sdfat/Kconfig
+++ b/fs/sdfat/Kconfig
@@ -1,5 +1,5 @@
 config SDFAT_FS
-	tristate "sdFAT fs support"
+	tristate "sdFAT filesystem support"
 	default y
 	select NLS
 	select NLS_UTF8
@@ -69,15 +69,18 @@ config SDFAT_CHECK_RO_ATTR
 
 config SDFAT_ALIGNED_MPAGE_WRITE
 	bool "Enable supporting aligned mpage_write"
-	default y
+	default y if SDFAT_FS=y
+	default n if SDFAT_FS=m
 	depends on SDFAT_FS
 
 config SDFAT_VIRTUAL_XATTR
 	bool "Virtual xattr support for sdFAT"
-	default y
+	default n
 	depends on SDFAT_FS
 	help
-	  To support virtual xattr.
+	  If you enable this feature, it supports virtual xattr.
+	  This feature will be deprecated because it might be the same with
+	  "context" mount option.
 
 config SDFAT_VIRTUAL_XATTR_SELINUX_LABEL
 	string "Default string for SELinux label"
@@ -92,31 +95,36 @@ config SDFAT_SUPPORT_STLOG
 	depends on SDFAT_FS && PROC_STLOG
 
 config SDFAT_DEBUG
-	bool "Enable debug features"
+	bool "enable debug features"
 	depends on SDFAT_FS
 	default y
 
 config SDFAT_DBG_IOCTL
-	bool "Enable debug-ioctl features"
+	bool "enable debug-ioctl features"
 	depends on SDFAT_FS && SDFAT_DEBUG
 	default n
 
 config SDFAT_DBG_MSG
-	bool "Enable debug messages"
+	bool "enable debug messages"
 	depends on SDFAT_FS && SDFAT_DEBUG
 	default y
 
 config SDFAT_DBG_BUGON
-	bool "Enable strict BUG_ON() for debugging"
+	bool "enable strict BUG_ON() for debugging"
 	depends on SDFAT_FS && SDFAT_DEBUG
 	default n
 
 config SDFAT_DBG_WARNON
-	bool "Enable strict WARN_ON() for debugging"
+	bool "enable strict WARN_ON() for debugging"
 	depends on SDFAT_FS && SDFAT_DEBUG
 	default n
 
 config SDFAT_STATISTICS
-	bool "Enable statistics for bigdata"
+	bool "enable statistics for bigdata"
+	depends on SDFAT_FS
+	default y
+
+config SDFAT_UEVENT
+	bool "enable uevent"
 	depends on SDFAT_FS
 	default y
