drivers: input: touchscreen: Add an interface to expose TP features to userspace
* Needs to implement and register ops from TP driver
* Access them via /sys/touchpanel/*
* Export capacitive keys status

--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -122,4 +122,4 @@ endif
 obj-$(CONFIG_TOUCHSCREEN_FTS8719)	+= fts8719/
 TOUCH_LISTS := $(subst ",,$(CONFIG_TOUCHSCREEN_MTK_TOUCH))
 obj-y += $(foreach TOUCH,$(TOUCH_LISTS),$(TOUCH)/)
-
+obj-$(CONFIG_TOUCHSCREEN_COMMON)	+= tp_common.o
