--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1265,6 +1265,15 @@ config I2C_STATUS_FOR_TOUCH
 	  Say Y here if you use touch driver detect system i2c status when exit suspend state.
 	  If unsure, say N.
 
+config TOUCHSCREEN_COMMON
+	bool "Common touchscreen interface to interact with userspace"
+	default y
+	help
+	  Say Y here if you want to control touchpanel features via
+	  /sys/touchpanel.
+
+	  If unsure, say N.
+
 source "drivers/input/touchscreen/GT9896/Kconfig"
 source "drivers/input/touchscreen/focaltech_touch/Kconfig"
 source "drivers/input/touchscreen/xiaomi/Kconfig"
