--- a/arch/arm64/boot/dts/mediatek/xiaomi-mt6889-common.dtsi
+++ b/arch/arm64/boot/dts/mediatek/xiaomi-mt6889-common.dtsi
@@ -669,5 +669,5 @@ USB SWITCH GPIO end */
 
 //#include "mediatek/cust_mt6885_touch_1080x2280.dtsi"
 #include "mediatek/cust_mt6885_camera.dtsi"
-#include <k6889v1_64/cust.dtsi>
+#include "mediatek/cezanne/cust.dtsi"
 /*End of this file, DO NOT ADD ANYTHING HERE*/
